--- a/compose.yml
+++ b/compose.yml
@@ -16,3 +16,6 @@ services:
       POSTGRES_DB: mydatabase
       POSTGRES_PASSWORD: password
       POSTGRES_USER: ming
+
+    ports:
+      - '5432:5432'
