--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "db:dev:up": "docker compose up db -d",
     "prisma:dev:deploy": "prisma migrate deploy",
   
-    "db:dev:restart": "npm db:dev:up",
+    "db:dev:restart": "npm run db:dev:rm && npm run db:dev:up && npm run prisma:dev:deploy",
     "build": "nest build",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "start": "nest start",
